| Summary: | ASTERISK-29582: res_pjproject: Can't map pjproject log messages to Asterisk TRACE | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2021-08-16 08:23:01 | Date Closed: | 2021-08-20 09:42:17 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjproject |
| Versions: | 16.20.0 18.6.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | res_pjproject doesn't allow mapping pjproject log levels to the new(ish) Asterisk TRACE level.
| ||
| Comments: | By: Friendly Automation (friendly-automation) 2021-08-20 09:42:18.798-0500 Change 16281 merged by Friendly Automation: res_pjproject: Allow mapping to Asterisk TRACE level [https://gerrit.asterisk.org/c/asterisk/+/16281|https://gerrit.asterisk.org/c/asterisk/+/16281] By: Friendly Automation (friendly-automation) 2021-08-20 09:49:45.392-0500 Change 16280 merged by George Joseph: res_pjproject: Allow mapping to Asterisk TRACE level [https://gerrit.asterisk.org/c/asterisk/+/16280|https://gerrit.asterisk.org/c/asterisk/+/16280] By: Friendly Automation (friendly-automation) 2021-08-20 09:49:54.554-0500 Change 16239 merged by George Joseph: res_pjproject: Allow mapping to Asterisk TRACE level [https://gerrit.asterisk.org/c/asterisk/+/16239|https://gerrit.asterisk.org/c/asterisk/+/16239] By: Friendly Automation (friendly-automation) 2021-08-20 09:50:10.727-0500 Change 16282 merged by George Joseph: res_pjproject: Allow mapping to Asterisk TRACE level [https://gerrit.asterisk.org/c/asterisk/+/16282|https://gerrit.asterisk.org/c/asterisk/+/16282] | ||